<resources>
    <string name="app_name">flamango</string>
    <string name="title_activity_second">SecondActivity</string>
    <string name="title_home">Trending</string>
    <string name="title_dashboard">Search</string>
    <string name="title_notifications">Favorites</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="SearchMovieRadio">Movie</string>
    <string name="SearchPersonRadio">Person</string>
    <string name="MoveSearchButton">Search</string>
    <string name="MovieSearchHint">Search...</string>
    <string name="appTitle">Flamango</string>
</resources>
