<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.dashboard.DashboardFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="421dp"
        android:layout_height="564dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.904">

    </androidx.recyclerview.widget.RecyclerView>

    <EditText
        android:id="@+id/editText3"
        android:layout_width="212dp"
        android:layout_height="48dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="19dp"
        android:layout_marginBottom="84dp"
        android:ems="10"
        android:hint="@string/MovieSearchHint"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/recyclerView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button3"
        android:layout_width="106dp"
        android:layout_height="41dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="25dp"
        android:text="@string/MoveSearchButton"
        app:layout_constraintBottom_toTopOf="@+id/recyclerView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.312"
        app:layout_constraintStart_toEndOf="@+id/editText3"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.305" />

    <RadioGroup
        android:id="@+id/radiogroup1"
        android:layout_width="259dp"
        android:layout_height="54dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="98dp"
        android:layout_marginBottom="13dp"
        android:checkedButton="@id/radioButton"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/recyclerView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button3">

        <RadioButton
            android:id="@+id/radioButton"
            android:layout_width="88dp"
            android:layout_height="19dp"
            android:layout_marginStart="31dp"
            android:layout_marginLeft="31dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="47dp"
            android:text="@string/SearchMovieRadio" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="96dp"
            android:layout_height="19dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="9dp"
            android:layout_marginRight="9dp"
            android:layout_marginBottom="47dp"
            android:text="@string/SearchPersonRadio" />

    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>